# PDF-Matrix-Grabber

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  results.csv  run_windows.cmd
docs/: ANALYSIS.md  AUDIT.md  PROMPT.md  WINDOWS_FOR_BEGINNERS.md
runtime/: README.md
src/dmx_grabber/: __init__.py  __main__.py  cli.py  converter.py  decoder.py  exporter.py  models.py  parser.py  processor.py
